Fix style, spacing & responsive design of SeasonalMenus page

--- a/client/src/components/pages/SeasonalMenus/SeasonalMenus.module.scss
+++ b/client/src/components/pages/SeasonalMenus/SeasonalMenus.module.scss
@@ -1,6 +1,6 @@
 .about {
   display: grid;
-  gap: var(--vertical-spacer-medium);
+  gap: var(--vertical-spacer-large);
   align-items: start;
 
   h2 {
@@ -8,18 +8,18 @@
   }
 
   @media screen and (min-width: 768px) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1.25fr 1fr;
+    justify-content: center;
   }
 }
 
 .aboutRightColumn {
   li {
-    margin-block: 0.25rem;
+    margin-bottom: 0.25rem;
   }
 
   a {
     font-size: var(--fs-base);
-    font-weight: unset;
     margin-block: var(--vertical-spacer-small);
   }
 
@@ -29,11 +29,10 @@
 }
 
 .livePreviewMenuContainer {
-  margin-top: var(--vertical-spacer-medium);
-  margin-bottom: var(--vertical-spacer-small);
+  margin-top: var(--vertical-spacer-large);
 
-  @media screen and (min-width: 768px) {
-    margin-top: var(--vertical-spacer-large);
+  h2 {
+    margin-bottom: var(--vertical-spacer-small);
   }
 }
 
@@ -43,25 +42,27 @@
   grid-template-columns: repeat(2, 1fr);
   justify-content: center;
 
-  background: var(--clr-bg-light);
-
   padding: var(--vertical-spacer-small);
+  border-radius: var(--border-radius-100-top);
 
+  background: var(--clr-bg-light);
+  box-shadow: var(--box-shadow-100);
   @media screen and (min-width: 768px) {
     grid-template-columns: repeat(auto-fit, minmax(8ch, 1fr));
   }
 }
 
 .activeTabButton {
-  background: var(--clr-fg-light);
+  background: var(--clr-fg);
+  border: 3px solid var(--clr-fg);
   color: var(--clr-bg);
 }
 
 .pdfDocument {
   max-width: 100%;
   padding: var(--vertical-spacer-small);
-  background: var(--clr-bg);
-  border-radius: var(--border-radius-200);
+  background: var(--clr-bg-light);
+  border-radius: var(--border-radius-100-bottom);
   box-shadow: var(--box-shadow-100);
 }
 
